Fixed product layout issue

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8229,3 +8229,12 @@ input[readonly] {
     opacity: 1; }
   .hover-overlay a {
     text-decoration: none; }
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  color: #495057;
+  background-color: #888F7F;
+  border-color: #dee2e6 #dee2e6 #fff; }
+
+.nav-tabs .nav-link {
+  border: 0; }
