--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -117,3 +117,15 @@ $bg-green-fill: #888F7F;
         text-decoration: none;
     }
 }
+
+// Product Page
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+    color: #495057;
+    background-color: #888F7F;
+    border-color: #dee2e6 #dee2e6 #fff;
+}
+
+.nav-tabs .nav-link {
+    border: 0;
+}
